feat: update service and controller