@@ -4,6 +4,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.util.Strings;
 import org.edupro.web.constant.BackEndUrl;
+import org.edupro.web.constant.CommonConstant;
+import org.edupro.web.exception.EduProWebException;
 import org.edupro.web.model.request.MapelRequest;
 import org.edupro.web.model.response.MapelResponse;
 import org.edupro.web.model.response.Response;
@@ -13,15 +15,19 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.validation.FieldError;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
-public class MasterMapelServiceImpl implements MasterMapelService {
+public class MasterMapelServiceImpl extends BaseService implements MasterMapelService {
     private final BackEndUrl backEndUrl;
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
@@ -34,11 +40,12 @@ public class MasterMapelServiceImpl implements MasterMapelService {
             if (response.getStatusCode() == HttpStatus.OK) {
                 return (List<MapelResponse>) response.getBody().getData();
             }
-        }catch (RestClientException e){
-            return Collections.emptyList();
-        }
 
-        return List.of();
+            return Collections.emptyList();
+        }catch (RestClientException e){
+            var errors = this.readError(e);
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }
     }
 
     @Override
@@ -52,13 +59,15 @@ public class MasterMapelServiceImpl implements MasterMapelService {
 
                 return Optional.of(result);
             }
-        }catch (RestClientException e){
-            return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
-        }
 
-        return Optional.empty();
+            return Optional.empty();
+        }catch (RestClientException e){
+            var errors = this.readError(e);
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }catch (IOException e) {
+            List<FieldError> errors = List.of(new FieldError("id", id, e.getMessage()));
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }
     }
 
     @Override
@@ -72,12 +81,15 @@ public class MasterMapelServiceImpl implements MasterMapelService {
                 MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
                 return Optional.of(result);
             }
-        }catch (RestClientException e){
+
             return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
+        }catch (RestClientException e){
+            var errors = this.readError(e);
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }catch (IOException e) {
+            List<FieldError> errors = List.of(new FieldError("id", "id", e.getMessage()));
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
         }
-        return Optional.empty();
     }
 
     @Override
@@ -91,12 +103,15 @@ public class MasterMapelServiceImpl implements MasterMapelService {
                 MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
                 return Optional.of(result);
             }
-        }catch (RestClientException e){
+
             return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
+        }catch (RestClientException e){
+            var errors = this.readError(e);
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }catch (IOException e) {
+            List<FieldError> errors = List.of(new FieldError("id", id, e.getMessage()));
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
         }
-        return Optional.empty();
     }
 
     @Override
@@ -109,11 +124,14 @@ public class MasterMapelServiceImpl implements MasterMapelService {
                 MapelResponse result = objectMapper.readValue(json, MapelResponse.class);
                 return Optional.of(result);
             }
-        }catch (RestClientException e){
+
             return Optional.empty();
-        }catch (IOException e){
-            throw new RuntimeException(e);
+        }catch (RestClientException e){
+            var errors = this.readError(e);
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
+        }catch (IOException e) {
+            List<FieldError> errors = List.of(new FieldError("id", id, e.getMessage()));
+            throw new EduProWebException(CommonConstant.Error.ERR_API, errors);
         }
-        return Optional.empty();
     }
 }
